fix alignment

--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ p {
 	margin: 5px auto;
 }
 
-.header {
-	display: inline-block;
-}
-
 #body-statefarm {
 	margin: 40px auto;
 }
